update php unit config and added test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,11 +27,8 @@
             <directory>src</directory>
             <exclude>
                 <directory>src/Resources</directory>
+                <directory>src/DependencyInjection</directory>
             </exclude>
         </whitelist>
     </filter>
-
-    <logging>
-        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false" showOnlySummary="true"/>
-    </logging>
 </phpunit>
