--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ php:
   - '7.0'
   - '7.1'
 
-sudo: false
-
 cache:
   directories:
     - $HOME/.composer/cache/files
@@ -16,4 +14,4 @@ before_install:
 
 install: composer update --prefer-source
 
-script: phpunit --coverage-text
+script: ./vendor/bin/phpunit --coverage-text
