--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,6 @@ php:
   - '7.0'
   - '7.1'
 
-cache:
-  directories:
-    - $HOME/.composer/cache/files
+install: composer update
 
-before_install:
-  - composer self-update
-
-install: composer update --prefer-source
-
-script: ./vendor/bin/phpunit --coverage-text
+script: vendor/bin/phpunit
