--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require-dev": {
     "symfony/browser-kit": "~2.3|~3.0",
     "symfony/phpunit-bridge": "~2.3|~3.0",
-    "phpunit/phpunit": "^5.7|^6"
+    "phpunit/phpunit": "^5.7"
   },
   "autoload": {
     "psr-4": {
