--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,4 +31,8 @@
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false" showOnlySummary="true"/>
+        <log type="coverage-clover" target="./build/clover.xml" logIncompleteSkipped="false"/>
+    </logging>
 </phpunit>
