fixed scrutinizer config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,6 +12,7 @@ build:
     tests:
         override:
             -
+                command: 'phpunit'
                 coverage:
                     file: 'build/clover.xml'
                     format: 'clover'
