--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,7 +12,7 @@ build:
     tests:
         override:
             -
-                command: 'phpunit'
+                command: 'phpunit --coverage-clover=clover.xml'
                 coverage:
-                    file: 'build/clover.xml'
+                    file: 'clover.xml'
                     format: 'clover'
