added scripts to copy swagger-ui files to Resources directory on composer update

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,13 @@
   },
   "include-path": [
     "src"
-  ]
+  ],
+  "scripts": {
+    "post-install-cmd": [
+      "cp -r vendor/swagger-api/swagger-ui/dist/ src/Resources/public/"
+    ],
+    "post-update-cmd": [
+      "cp -r vendor/swagger-api/swagger-ui/dist/ src/Resources/public/"
+    ]
+  }
 }
