--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "GPL-3.0",
   "require": {
     "php": ">=5.6",
+    "composer/composer": "^1.4",
     "symfony/http-kernel": "~2.3|~3.0",
     "symfony/framework-bundle": "~2.3|~3.0",
     "symfony/yaml": "~2.3|~3.0",
