--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
     <php>
         <ini name="error_reporting" value="-1" />
         <server name="KERNEL_DIR" value="tests/" />
+        <env name="KERNEL_CLASS" value="HarmBandstra\SwaggerUiBundle\Tests\AppKernel" />
     </php>
 
     <testsuites>
