--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,23 @@
   "require": {
     "php": ">=5.6",
     "composer/composer": "^1.0",
-    "symfony/http-kernel": "~2.7|~3.0",
-    "symfony/framework-bundle": "~2.7|~3.0",
-    "symfony/yaml": "~2.7|~3.0",
-    "swagger-api/swagger-ui": "^3.0"
+    "symfony/http-kernel": "~2.7|~3.0|~4.0",
+    "symfony/framework-bundle": "~2.7|~3.0|~4.0",
+    "symfony/yaml": "~2.7|~3.0|~4.0",
+    "swagger-api/swagger-ui": "^3.0|~4.0"
   },
   "require-dev": {
-    "symfony/browser-kit": "~2.7|~3.0",
-    "symfony/phpunit-bridge": "~2.7|~3.0",
-    "phpunit/phpunit": "^5.7"
+    "symfony/browser-kit": "~2.7|~3.0|~4.0",
+    "symfony/phpunit-bridge": "~2.7|~3.0|~4.0"
   },
   "autoload": {
     "psr-4": {
       "HarmBandstra\\SwaggerUiBundle\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "HarmBandstra\\SwaggerUiBundle\\Tests\\": "tests/"
     }
   },
   "include-path": [
