--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "swagger", "php", "symfony", "swagger-ui", "api", "doc", "bundle"
   ],
   "homepage": "https://github.com/harmbandstra/swagger-ui-bundle",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "require": {
     "php": ">=5.6",
     "composer/composer": "^1.0",
