--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,16 @@
   "homepage": "https://github.com/harmbandstra/swagger-ui-bundle",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.0",
     "composer/composer": "^1.0",
-    "symfony/http-kernel": "~2.7|~3.0|~4.0",
-    "symfony/framework-bundle": "~2.7|~3.0|~4.0",
-    "symfony/yaml": "~2.7|~3.0|~4.0",
-    "swagger-api/swagger-ui": "^3.0|~4.0"
+    "symfony/http-kernel": "~3.3|~4.0",
+    "symfony/framework-bundle": "~3.3|~4.0",
+    "symfony/yaml": "~3.3|~4.0",
+    "swagger-api/swagger-ui": "^3.3|~4.0"
   },
   "require-dev": {
-    "symfony/browser-kit": "~2.7|~3.0|~4.0",
-    "symfony/phpunit-bridge": "~2.7|~3.0|~4.0"
+    "symfony/browser-kit": "~3.3|~4.0",
+    "symfony/phpunit-bridge": "~3.3|~4.0"
   },
   "autoload": {
     "psr-4": {
