--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,17 @@
   "require": {
     "php": ">=7.0",
     "composer/composer": "^1.0",
-    "symfony/http-kernel": "~3.3|~4.0",
-    "symfony/framework-bundle": "~3.3|~4.0",
-    "symfony/yaml": "~3.3|~4.0",
-    "swagger-api/swagger-ui": "^3.3|~4.0"
+    "symfony/config": "~3.3",
+    "symfony/dependency-injection": "~3.3",
+    "symfony/framework-bundle": "~3.3",
+    "symfony/http-kernel": "~3.3",
+    "symfony/routing": "~3.3",
+    "symfony/yaml": "~3.3",
+    "swagger-api/swagger-ui": "^3.0"
   },
   "require-dev": {
-    "symfony/browser-kit": "~3.3|~4.0",
-    "symfony/phpunit-bridge": "~3.3|~4.0"
+    "symfony/browser-kit": "~3.3",
+    "symfony/phpunit-bridge": "~3.3"
   },
   "autoload": {
     "psr-4": {
