--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
   "homepage": "https://github.com/harmbandstra/swagger-ui-bundle",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": ">=7.0",
+    "php": "^7.1.3",
     "ext-json": "*",
-    "composer/composer": "^1.0",
-    "symfony/http-kernel": "~4.0",
+    "symfony/config": "~4.0",
+    "symfony/dependency-injection": "~4.0",
     "symfony/framework-bundle": "~4.0",
+    "symfony/http-kernel": "~4.0",
+    "symfony/routing": "~4.0",
     "symfony/yaml": "~4.0",
-    "swagger-api/swagger-ui": "^3.3|~4.0"
+    "swagger-api/swagger-ui": "^3.0",
   },
   "require-dev": {
     "symfony/browser-kit": "~4.0",
