--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
   "require": {
     "php": "^7.1.3",
     "ext-json": "*",
-    "symfony/config": "~4.0",
-    "symfony/dependency-injection": "~4.0",
-    "symfony/framework-bundle": "~4.0",
-    "symfony/http-kernel": "~4.0",
-    "symfony/routing": "~4.0",
-    "symfony/yaml": "~4.0",
+    "symfony/config": "^4.0|^5.0",
+    "symfony/dependency-injection": "^4.0|^5.0",
+    "symfony/framework-bundle": "^4.0|^5.0",
+    "symfony/http-kernel": "^4.0|^5.0",
+    "symfony/routing": "^4.0|^5.0",
+    "symfony/yaml": "^4.0|^5.0",
     "swagger-api/swagger-ui": "^3.0"
   },
   "require-dev": {
-    "symfony/browser-kit": "~4.0",
-    "symfony/phpunit-bridge": "~4.0",
+    "symfony/browser-kit": "^4.0|^5.0",
+    "symfony/phpunit-bridge": "^4.0|^5.0",
     "composer/composer": "^1.8",
     "phpspec/prophecy": "^1.8"
   },
