run scrutinizer with php 7.2

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,11 +12,16 @@ coding_style:
                 concatenation: true
 build:
     environment:
+        php:
+            version: 7.2
         variables:
             SYMFONY_PHPUNIT_REMOVE_RETURN_TYPEHINT: '1'
-    tests:
-        override:
-            - command: vendor/bin/simple-phpunit --coverage-clover=clover.xml
-              coverage:
-                  file: clover.xml
-                  format: clover
+
+    nodes:
+        tests-with-coverage:
+            tests:
+                override:
+                    - command: vendor/bin/simple-phpunit --coverage-clover=clover.xml
+                      coverage:
+                          file: clover.xml
+                          format: clover
