--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
   },
   "require-dev": {
     "symfony/browser-kit": "^4.0|^5.0",
-    "symfony/phpunit-bridge": "^4.0|^5.0",
     "composer/composer": "^1.8",
-    "phpspec/prophecy": "^1.8"
+    "phpspec/prophecy": "^1.8",
+    "phpunit/phpunit": "^8.4"
   },
   "autoload": {
     "psr-4": {
