Added option to specify a asset URL path

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -8,3 +8,4 @@ services:
       $projectDir: '%kernel.project_dir%'
       $swaggerFiles: '%hb_swagger_ui.files%'
       $directory: '%hb_swagger_ui.directory%'
+      $assetUrlPath: '%hb_swagger_ui.assetUrlPath%'
