--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/harmbandstra/swagger-ui-bundle",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": "^7.1.3",
+    "php": "^7.1.3 || ^8.0",
     "ext-json": "*",
     "symfony/config": "^4.0|^5.0",
     "symfony/dependency-injection": "^4.0|^5.0",
