--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,8 +12,7 @@ coding_style:
                 concatenation: true
 build:
     environment:
-        php:
-            version: 8.0
+        php: 8.0.0
 
     nodes:
         tests-with-coverage:
