--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "symfony/browser-kit": "^4.0|^5.0",
     "composer/composer": "^1.8",
     "phpspec/prophecy": "^1.8",
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^9.5",
+    "phpspec/prophecy-phpunit": "^2.0"
   },
   "autoload": {
     "psr-4": {
