--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/harmbandstra/swagger-ui-bundle",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": "^7.1.3",
+    "php": "^7.2 || ^8.0",
     "ext-json": "*",
     "symfony/config": "^4.0|^5.0",
     "symfony/dependency-injection": "^4.0|^5.0",
@@ -22,7 +22,7 @@
     "symfony/browser-kit": "^4.0|^5.0",
     "composer/composer": "^1.8",
     "phpspec/prophecy": "^1.8",
-    "phpunit/phpunit": "^8.4"
+    "phpunit/phpunit": "^8.5"
   },
   "autoload": {
     "psr-4": {
