added support for swagger UI config file

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -9,3 +9,4 @@ services:
       $swaggerFiles: '%hb_swagger_ui.files%'
       $directory: '%hb_swagger_ui.directory%'
       $assetUrlPath: '%hb_swagger_ui.assetUrlPath%'
+      $configFile: '%hb_swagger_ui.configFile%'
