--- a/tests/Resources/config/config.yml
+++ b/tests/Resources/config/config.yml
@@ -2,7 +2,8 @@ framework:
   test: ~
   secret: test
   session:
-    storage_id: session.storage.mock_file
+    handler_id: null
+    storage_factory_id: session.storage.factory.mock_file
   profiler:
     collect: false
   router:
