--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "symfony/http-kernel": "^4.4|^5.0|^6.0",
     "symfony/routing": "^4.4|^5.0|^6.0",
     "symfony/yaml": "^4.4|^5.0|^6.0",
-    "swagger-api/swagger-ui": "^4.0"
+    "swagger-api/swagger-ui": "4.1.2"
   },
   "require-dev": {
     "symfony/browser-kit": "^4.0|^5.0|^6.0",
