--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "ext-json": "*",
-    "symfony/config": "^4.4|^5.0|^6.0",
-    "symfony/dependency-injection": "^4.4|^5.0|^6.0",
-    "symfony/framework-bundle": "^4.4|^5.0|^6.0",
-    "symfony/http-kernel": "^4.4|^5.0|^6.0",
-    "symfony/routing": "^4.4|^5.0|^6.0",
-    "symfony/yaml": "^4.4|^5.0|^6.0",
+    "symfony/config": "^4.4|^5.0|^6.0|^7.0",
+    "symfony/dependency-injection": "^4.4|^5.0|^6.0|^7.0",
+    "symfony/framework-bundle": "^4.4|^5.0|^6.0|^7.0",
+    "symfony/http-kernel": "^4.4|^5.0|^6.0|^7.0",
+    "symfony/routing": "^4.4|^5.0|^6.0|^7.0",
+    "symfony/yaml": "^4.4|^5.0|^6.0|^7.0",
     "swagger-api/swagger-ui": "^4.0"
   },
   "require-dev": {
-    "symfony/browser-kit": "^4.0|^5.0|^6.0",
+    "symfony/browser-kit": "^4.0|^5.0|^6.0|^7.0",
     "composer/composer": "^2.0.13",
     "phpspec/prophecy": "^1.15",
     "phpunit/phpunit": "^9.5"
